Cambios en texto e imagenes
CAmbio de imagenes y texto en varias paginas

--- a/comercios.html
+++ b/comercios.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="es">
   <head>
-    <title>Inicio</title>
+     <title>Ofiplaza San Dionisio</title>
+    <meta name="description" content="Porque sabemos lo importante que es para usted hacer crecer su negocio, Ofiplaza San Dionisio fue diseñado para brindarle las comodidades necesarias." />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -94,7 +95,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
           <h2><span class="text-light">Módulos Para</span> Rentar</h2>
           <div class="row row-30 justify-content-xl-between h-100">
             <div class="col-md-6 col-xl-6">
-              <p class="big">Ofiplaza San Dionisio, cuenta con 2 plantas comerciales: primer piso, segundo piso. Cada piso tiene un espacio para la ubicación de módulos categorizados en: tiendas en general, restaurantes, heladerías, entre otros.
+              <p class="big">Ofiplaza San Dionisio, cuenta con 3 plantas comerciales: primer piso, segundo piso. Cada piso tiene un espacio para la ubicación de módulos categorizados en: tiendas en general, restaurantes, heladerías, entre otros.
 Para mayor información acerca de espacios disponibles, contáctenos al +505 8941-5700.</p>
               <div class="group-sm group-wrap-2" style="float: right; margin-bottom: 10px;"><a class="button  contact_button" href="contactos.html">Contáctenos</a>
               </div>
