--- a/new_project.html
+++ b/new_project.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="es">
   <head>
-    <title>Inicio</title>
+     <style>
+       /* Set the size of the div element that contains the map */
+    
+    </style>
+     <title>Ofiplaza San Dionisio</title>
+    <meta name="description" content="Porque sabemos lo importante que es para usted hacer crecer su negocio, Ofiplaza San Dionisio fue diseñado para brindarle las comodidades necesarias." />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -96,7 +101,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                   <div class="col-md-9 col-lg-7 offset-md-1 offset-xxl-0">
                     <div style="background-color: rgba(23,33,118,0.6); padding: 15px" data-caption-animate="fadeInUp" data-caption-delay="100">
                       <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Desarrollo del Proyecto</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">food court y comercio</span></h1>
-                      <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Desarrollo de un nuevo centro comercial.</p>
+                      <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Desarrollo de un nuevo Oficentro.</p>
                       <div class="button-wrap-default" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button  contact_button" href="desarrollo_eops3.html">Saber Mas</a></div>
                     </div>
                   </div>
@@ -251,29 +256,22 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <div class="group-item">
                   <dl class="list-terms-2">
                     <dt>Teléfono:</dt>
-                    <dd><a href="tel:+(505)89415700">+(505) 8941-5700</a></dd> 
-
+                    <dd><a href="tel:+(505) 8941 5700">+(505) 8941 5700</a></dd>
                   </dl>
                   <dl class="list-terms-2">
-                    <dt>Fax:</dt>
-                    <dd><a href="tel:+(505)85461546">(505) 8546-1546</a></dd>
-                  </dl><a class="d-inline-block big link-underline" href="mailto:ventas@infodesarrollos.com">ventas@infodesarrollos.com</a>
-                </div>
-                <div class="group-item">
-                  <ul class="list list-0">
-                    <li class="text-secondary">Rotonda Universitaria <br>300 vrs Sur, <br>Pista Sub Urbana</li>
-                  </ul>
+                    <dt>email:</dt>
+                    <dd><a  href="mailto:ventas@infodesarrollos.com">ventas@infodesarrollos.com</a></dd>
+                  </dl>
                 </div>
               </div>
-              <!--Please, add the data attribute data-key="YOUR_API_KEY" in order to insert your own API key for the Google map.-->
-              <!--Please note that YOUR_API_KEY should replaced with your key.-->
-              <!--Example: <div class="google-map-container" data-key="YOUR_API_KEY">-->
-              <div class="google-map-container google-map-container-2" data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-zoom="5" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
+              <!--AIzaSyAzBzkJea_vv3S683H-Rwikh42vOl7NsXQ-->
+              <div class="google-map-container google-map-container-2" data-key="AIzaSyCU7hS23ZT9jutxeXmjEBiIrl7WVKcSQgI" data-center="Pista Suburbana, Ofoplaza San Dionisio, Managua 11002" data-zoom="16" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
                 <div class="google-map"></div>
                 <ul class="google-map-markers">
-                  <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-description="9870 St Vincent Place, Glasgow"></li>
+                  <li data-location="Pista Suburbana, Ofoplaza San Dionisio, Managua 11002" data-description="Rotona Universitarai, 300m abajo, Pista Sub Urbana"></li>
                 </ul>
               </div>
+           
             </div>
             <div class="col-md-10 col-lg-6">
               <h5>Escribanos</h5>
@@ -282,13 +280,13 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <div class="row row-10">
                   <div class="col-md-6">
                     <div class="form-wrap">
-                      <input class="form-input" id="contact-first-name" type="text" name="name" data-constraints="@Required">
+                      <input class="form-input" id="contact-first-name" type="text" name="nombre" data-constraints="@Required">
                       <label class="form-label" for="contact-first-name">Nombre</label>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-wrap">
-                      <input class="form-input" id="contact-last-name" type="text" name="name" data-constraints="@Required">
+                      <input class="form-input" id="contact-last-name" type="text" name="apellido" data-constraints="@Required">
                       <label class="form-label" for="contact-last-name">Apellido</label>
                     </div>
                   </div>
