--- a/desarrollo.html
+++ b/desarrollo.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="es">
   <head>
-    <title>Inicio</title>
+     <title>Ofiplaza San Dionisio</title>
+    <meta name="description" content="Porque sabemos lo importante que es para usted hacer crecer su negocio, Ofiplaza San Dionisio fue diseñado para brindarle las comodidades necesarias." />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -227,261 +228,261 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
             
         </section>
         <article class="light-box" id="1">
-        	<a href="#30" class="back"><i class="icon_back"></i></a>
+        	<a href="#30" class="back"></a>
         		<img src="images/eops1_2/1.jpg" alt="">
-        	<a href="#2" class="next"><i class="icon_next"></i></a>
+        	<a href="#2" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="2">
-        	<a href="#1" class="back"><i class="icon_back"></i></a>
+        	<a href="#1" class="back"></a>
         		<img src="images/eops1_2/2.jpg" alt="">
-        	<a href="#3" class="next"><i class="icon_next"></i></a>
+        	<a href="#3" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="3">
-        	<a href="#2" class="back"><i class="icon_back"></i></a>
+        	<a href="#2" class="back"></a>
         		<img src="images/eops1_2/3.jpg" alt="">
-        	<a href="#4" class="next"><i class="icon_next"></i></a>
+        	<a href="#4" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="4">
-        	<a href="#3" class="back"><i class="icon_back"></i></a>
+        	<a href="#3" class="back"></a>
         		<img src="images/eops1_2/4.jpg" alt="">
-        	<a href="#5" class="next"><i class="icon_next"></i></a>
+        	<a href="#5" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="5">
-        	<a href="#4" class="back"><i class="icon_back"></i></a>
+        	<a href="#4" class="back"></a>
         		<img src="images/eops1_2/5.jpg" alt="">
-        	<a href="#6" class="next"><i class="icon_next"></i></a>
+        	<a href="#6" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="6">
-        	<a href="#5" class="back"><i class="icon_back"></i></a>
+        	<a href="#5" class="back"></a>
         		<img src="images/eops1_2/6.jpg" alt="">
-        	<a href="#7" class="next"><i class="icon_next"></i></a>
+        	<a href="#7" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="7">
-        	<a href="#6" class="back"><i class="icon_back"></i></a>
+        	<a href="#6" class="back"></a>
         		<img src="images/eops1_2/7.jpg" alt="">
-        	<a href="#8" class="next"><i class="icon_next"></i></a>
+        	<a href="#8" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="8">
-        	<a href="#7" class="back"><i class="icon_back"></i></a>
+        	<a href="#7" class="back"></a>
         		<img src="images/eops1_2/8.jpg" alt="">
-        	<a href="#9" class="next"><i class="icon_next"></i></a>
+        	<a href="#9" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="9">
-        	<a href="#8" class="back"><i class="icon_back"></i></a>
+        	<a href="#8" class="back"></a>
         		<img src="images/eops1_2/9.jpg" alt="">
-        	<a href="#10" class="next"><i class="icon_next"></i></a>
+        	<a href="#10" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="10">
-        	<a href="#9" class="back"><i class="icon_back"></i></a>
+        	<a href="#9" class="back"></a>
         		<img src="images/eops1_2/10.jpg" alt="">
-        	<a href="#11" class="next"><i class="icon_next"></i></a>
+        	<a href="#11" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="11">
-        	<a href="#10" class="back"><i class="icon_back"></i></a>
+        	<a href="#10" class="back"></a>
         		<img src="images/eops1_2/11.jpg" alt="">
-        	<a href="#12" class="next"><i class="icon_next"></i></a>
+        	<a href="#12" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="12">
-        	<a href="#11" class="back"><i class="icon_back"></i></a>
+        	<a href="#11" class="back"></a>
         		<img src="images/eops1_2/12.jpg" alt="">
-        	<a href="#13" class="next"><i class="icon_next"></i></a>
+        	<a href="#13" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="13">
-        	<a href="#12" class="back"><i class="icon_back"></i></a>
+        	<a href="#12" class="back"></a>
         		<img src="images/eops1_2/13.jpg" alt="">
-        	<a href="#14" class="next"><i class="icon_next"></i></a>
+        	<a href="#14" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="14">
-        	<a href="#13" class="back"><i class="icon_back"></i></a>
+        	<a href="#13" class="back"></a>
         		<img src="images/eops1_2/14.jpg" alt="">
-        	<a href="#15" class="next"><i class="icon_next"></i></a>
+        	<a href="#15" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="15">
-        	<a href="#14" class="back"><i class="icon_back"></i></a>
+        	<a href="#14" class="back"></a>
         		<img src="images/eops1_2/15.jpg" alt="">
-        	<a href="#16" class="next"><i class="icon_next"></i></a>
+        	<a href="#16" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="16">
-        	<a href="#15" class="back"><i class="icon_back"></i></a>
+        	<a href="#15" class="back"></a>
         		<img src="images/eops1_2/16.jpg" alt="">
-        	<a href="#17" class="next"><i class="icon_next"></i></a>
+        	<a href="#17" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="17">
-        	<a href="#16" class="back"><i class="icon_back"></i></a>
+        	<a href="#16" class="back"></a>
         		<img src="images/eops1_2/17.jpg" alt="">
-        	<a href="#18" class="next"><i class="icon_next"></i></a>
+        	<a href="#18" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="18">
-        	<a href="#17" class="back"><i class="icon_back"></i></a>
+        	<a href="#17" class="back"></a>
         		<img src="images/eops1_2/18.jpg" alt="">
-        	<a href="#19" class="next"><i class="icon_next"></i></a>
+        	<a href="#19" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="19">
-        	<a href="#18" class="back"><i class="icon_back"></i></a>
+        	<a href="#18" class="back"></a>
         		<img src="images/eops1_2/19.jpg" alt="">
-        	<a href="#20" class="next"><i class="icon_next"></i></a>
+        	<a href="#20" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="20">
-        	<a href="#19" class="back"><i class="icon_back"></i></a>
+        	<a href="#19" class="back"></a>
         		<img src="images/eops1_2/20.jpg" alt="">
-        	<a href="#21" class="next"><i class="icon_next"></i></a>
+        	<a href="#21" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="21">
-        	<a href="#20" class="back"><i class="icon_back"></i></a>
+        	<a href="#20" class="back"></a>
         		<img src="images/eops1_2/21.jpg" alt="">
-        	<a href="#22" class="next"><i class="icon_next"></i></a>
+        	<a href="#22" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="22">
-        	<a href="#21" class="back"><i class="icon_back"></i></a>
+        	<a href="#21" class="back"></a>
         		<img src="images/eops1_2/22.jpg" alt="">
-        	<a href="#23" class="next"><i class="icon_next"></i></a>
+        	<a href="#23" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="23">
-        	<a href="#22" class="back"><i class="icon_back"></i></a>
+        	<a href="#22" class="back"></a>
         		<img src="images/eops1_2/23.jpg" alt="">
-        	<a href="#24" class="next"><i class="icon_next"></i></a>
+        	<a href="#24" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="24">
-        	<a href="#23" class="back"><i class="icon_back"></i></a>
+        	<a href="#23" class="back"></a>
         		<img src="images/eops1_2/24.jpg" alt="">
-        	<a href="#25" class="next"><i class="icon_next"></i></a>
+        	<a href="#25" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="25">
         	<a href="#24" class="back"><i class="25"></i></a>
         		<img src="images/eops1_2/frente_derecho_3.jpg" alt="">
-        	<a href="#26" class="next"><i class="icon_next"></i></a>
+        	<a href="#26" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="26">
-        	<a href="#25" class="back"><i class="icon_back"></i></a>
+        	<a href="#25" class="back"></a>
         		<img src="images/eops1_2/26.jpg" alt="">
-        	<a href="#27" class="next"><i class="icon_next"></i></a>
+        	<a href="#27" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="27">
-        	<a href="#26" class="back"><i class="icon_back"></i></a>
+        	<a href="#26" class="back"></a>
         		<img src="images/eops1_2/27.jpg" alt="">
-        	<a href="#28" class="next"><i class="icon_next"></i></a>
+        	<a href="#28" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="28">
-        	<a href="#27" class="back"><i class="icon_back"></i></a>
+        	<a href="#27" class="back"></a>
         		<img src="images/eops1_2/28.jpg" alt="">
-        	<a href="#29" class="next"><i class="icon_next"></i></a>
+        	<a href="#29" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="29">
-        	<a href="#28" class="back"><i class="icon_back"></i></a>
+        	<a href="#28" class="back"></a>
         		<img src="images/eops1_2/29.jpg" alt="">
-        	<a href="#30" class="next"><i class="icon_next"></i></a>
+        	<a href="#30" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="30">
-        	<a href="#29" class="back"><i class="icon_back"></i></a>
+        	<a href="#29" class="back"></a>
         		<img src="images/eops1_2/30.jpg" alt="">
-        	<a href="#31" class="next"><i class="icon_next"></i></a>
+        	<a href="#31" class="next"></a>
         	<a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="31">
-          <a href="#30" class="back"><i class="icon_back"></i></a>
+          <a href="#30" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#32" class="next"><i class="icon_next"></i></a>
+          <a href="#32" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="32">
-          <a href="#31" class="back"><i class="icon_back"></i></a>
+          <a href="#31" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#33" class="next"><i class="icon_next"></i></a>
+          <a href="#33" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="33">
-          <a href="#32" class="back"><i class="icon_back"></i></a>
+          <a href="#32" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#34" class="next"><i class="icon_next"></i></a>
+          <a href="#34" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="34">
-          <a href="#33" class="back"><i class="icon_back"></i></a>
+          <a href="#33" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#35" class="next"><i class="icon_next"></i></a>
+          <a href="#35" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="35">
-          <a href="#34" class="back"><i class="icon_back"></i></a>
+          <a href="#34" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#36" class="next"><i class="icon_next"></i></a>
+          <a href="#36" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="36">
-          <a href="#35" class="back"><i class="icon_back"></i></a>
+          <a href="#35" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#37" class="next"><i class="icon_next"></i></a>
+          <a href="#37" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="37">
-          <a href="#36" class="back"><i class="icon_back"></i></a>
+          <a href="#36" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#38" class="next"><i class="icon_next"></i></a>
+          <a href="#38" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="38">
-          <a href="#37" class="back"><i class="icon_back"></i></a>
+          <a href="#37" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#39" class="next"><i class="icon_next"></i></a>
+          <a href="#39" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="39">
-          <a href="#38" class="back"><i class="icon_back"></i></a>
+          <a href="#38" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#40" class="next"><i class="icon_next"></i></a>
+          <a href="#40" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="40">
-          <a href="#39" class="back"><i class="icon_back"></i></a>
+          <a href="#39" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#41" class="next"><i class="icon_next"></i></a>
+          <a href="#41" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="41">
-          <a href="#40" class="back"><i class="icon_back"></i></a>
+          <a href="#40" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#42" class="next"><i class="icon_next"></i></a>
+          <a href="#42" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="42">
-          <a href="#41" class="back"><i class="icon_back"></i></a>
+          <a href="#41" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#43" class="next"><i class="icon_next"></i></a>
+          <a href="#43" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
         <article class="light-box" id="43">
-          <a href="#42" class="back"><i class="icon_back"></i></a>
+          <a href="#42" class="back"></a>
             <img src="images/eops1_2/30.jpg" alt="">
-          <a href="#1" class="next"><i class="icon_next"></i></a>
+          <a href="#1" class="next"></a>
           <a href="#" class="close">X</a>
         </article>
       </section>
