--- a/oficinas.html
+++ b/oficinas.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html class="wide wow-animation" lang="es">
   <head>
-    <title>Inicio</title>
+     <title>Ofiplaza San Dionisio</title>
+    <meta name="description" content="Porque sabemos lo importante que es para usted hacer crecer su negocio, Ofiplaza San Dionisio fue diseñado para brindarle las comodidades necesarias." />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
