--- a/new_project.html
+++ b/new_project.html
@@ -220,7 +220,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 </div>
               </div>
             </div>
-            <div class="col-md-6 wow fadeInLeft align-self-center d-flex justify-content-center" style="padding-bottom: 15px;">
+            <div class="col-md-6 wow fadeInRight align-self-center d-flex justify-content-center" style="padding-bottom: 15px;">
               <div class="box-image-item2" style="width:90%; height: 90%; background-image: url(images/eops_3/3-10-01.jpg)">
                </div>
             </div>
@@ -229,6 +229,56 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
       </section> 
       <div class="barra_azul">
       </div>
+
+
+        <!-- PLANTILLA DE DISTRIBUCION -->
+    <section id="plant_distribucion" class="section bg-gray-100 box-image-left">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 wow fadeInDown">
+              <div  style="background-color: white">
+                <h2 class="title-icon title-icon-2"><span style="color: #172176;">Plantillas de distribución <br></span></h2>
+                
+              </div>
+            </div>
+            <div class="col-md-12 wow fadeInUp align-self-center d-flex justify-content-center" style="padding-bottom: 15px;">
+               <section class="galeria">
+                <a href="#1">
+                  <img src="images/eops_3/primer_nivel.jpg" alt="">
+                </a>
+                <a href="#2">
+                  <img src="images/eops_3/segundo_nivel.jpg" alt="">
+                </a>
+                <a href="#3">
+                  <img src="images/eops_3/tercer_nivel.jpg" alt="">
+                </a>  
+              </section>
+              <section>
+                <article class="light-box" id="1">
+                  <a href="#3" class="back"><i class="icon_back"></i></a>
+                    <img src="images/eops_3/primer_nivel.jpg" alt="">
+                  <a href="#2" class="next"><i class="icon_next"></i></a>
+                  <a href="#plant_distribucion" class="close">X</a>
+                </article>
+                <article class="light-box" id="2">
+                  <a href="#1" class="back"><i class="icon_back"></i></a>
+                    <img src="images/eops_3/segundo_nivel.jpg" alt="">
+                  <a href="#3" class="next"><i class="icon_next"></i></a>
+                  <a href="#plant_distribucion" class="close">X</a>
+                </article>
+                <article class="light-box" id="3">
+                  <a href="#2" class="back"><i class="icon_back"></i></a>
+                    <img src="images/eops_3/tercer_nivel.jpg" alt="">
+                  <a href="#1" class="next"><i class="icon_next"></i></a>
+                  <a href="#plant_distribucion" class="close">X</a>
+                </article>
+              </section>
+            </div>
+          </div>
+        </div>
+      </section> 
+
+
 
       <!-- RESERVA -->
     <section class="section bg-blue">
@@ -250,7 +300,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
         <div class="container">
           <h2>Contactos</h2>
           <div class="row row-40">
-            <div class="col-md-10 col-lg-6">
+            <div class="col-md-10 col-lg-6 wow fadeInLeft">
               <h5>Nuestras oficinas</h5>
               <div class="group-lg group-wrap-3">
                 <div class="group-item">
@@ -273,7 +323,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
               </div>
            
             </div>
-            <div class="col-md-10 col-lg-6">
+            <div class="col-md-10 col-lg-6 wow fadeInRight">
               <h5>Escribanos</h5>
               <!--RD Mailform-->
               <form class="rd-form rd-mailform" data-form-output="form-output-global" data-form-type="contact" method="post" action="bat/rd-mailform.php">
