--- a/new_project.html
+++ b/new_project.html
@@ -204,7 +204,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
           <div class="row">
             <div class="col-md-6 wow fadeInLeft">
               <div class="section-lg section-lg-top-100" style="filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7)); ">
-                <h2 class="title-icon title-icon-2"><span style="color: white">Módulos <br><span class="text-light" style="color: white;">Comerciales y food court</span></span></h2>
+                <h2 class="title-icon title-icon-2"><span style="color: white">Módulos <br><span class="text-light" style="color: white;">Oficinas, Comerciales y food court</span></span></h2>
                 <p class="big"  style="color: white"><br>
                   Porque sabemos lo importante que es
                   para usted hacer crecer su negocio,
