Dar estilo a plnatillas
Estilizar plantillas en inicio y pagina de desarrollo en nuevo proyecto

--- a/desarrollo_eops3.html
+++ b/desarrollo_eops3.html
@@ -111,11 +111,22 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
             <a href="#8">
               <img src="images/eops_3/8.jpg" alt="">
             </a>
-            
+            <a href="#9">
+              <img src="images/eops_3/primer_nivel.jpg" alt="">
+            </a>
+            <a href="#10">
+              <img src="images/eops_3/segundo_nivel.jpg" alt="">
+            </a>
+            <a href="#11">
+              <img src="images/eops_3/tercer_nivel.jpg" alt="">
+            </a>  
+             <a href="#12">
+              <img src="images/eops_3/3-10-01.jpg" alt="">
+            </a>  
         </section>
         <section>
           <article class="light-box" id="1">
-            <a href="#30" class="back"><i class="icon_back"></i></a>
+            <a href="#12" class="back"><i class="icon_back"></i></a>
               <img src="images/eops_3/1.jpg" alt="">
             <a href="#2" class="next"><i class="icon_next"></i></a>
             <a href="#" class="close">X</a>
@@ -159,6 +170,30 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
           <article class="light-box" id="8">
             <a href="#7" class="back"><i class="icon_back"></i></a>
               <img src="images/eops_3/8.jpg" alt="">
+            <a href="#9" class="next"><i class="icon_next"></i></a>
+            <a href="#" class="close">X</a>
+          </article>
+          <article class="light-box" id="9">
+            <a href="#8" class="back"><i class="icon_back"></i></a>
+              <img src="images/eops_3/primer_nivel.jpg" alt="">
+            <a href="#10" class="next"><i class="icon_next"></i></a>
+            <a href="#plant_distribucion" class="close">X</a>
+          </article>
+          <article class="light-box" id="10">
+            <a href="#9" class="back"><i class="icon_back"></i></a>
+              <img src="images/eops_3/segundo_nivel.jpg" alt="">
+            <a href="#11" class="next"><i class="icon_next"></i></a>
+            <a href="#" class="close">X</a>
+          </article>
+          <article class="light-box" id="11">
+            <a href="#10" class="back"><i class="icon_back"></i></a>
+              <img src="images/eops_3/tercer_nivel.jpg" alt="">
+            <a href="#12" class="next"><i class="icon_next"></i></a>
+            <a href="#" class="close">X</a>
+          </article>
+           <article class="light-box" id="12">
+            <a href="#11" class="back"><i class="icon_back"></i></a>
+              <img src="images/eops_3/3-10-01.jpg" alt="">
             <a href="#1" class="next"><i class="icon_next"></i></a>
             <a href="#" class="close">X</a>
           </article>
