--- a/new_project.html
+++ b/new_project.html
@@ -199,7 +199,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
       <div class="barra_azul">
       </div>
       <!-- Modulos / Video-->
-      <section class="section bg-gray-100 box-image-left parallax-container" data-parallax-img="images/parallax-1-1920x1026.jpg">
+      <section class="section bg-gray-100 box-image-left parallax-container" data-parallax-img="images/parallax-1-eops2-1920x1026.jpg">
         <div class="container">
           <div class="row">
             <div class="col-md-6 wow fadeInLeft">
@@ -221,8 +221,8 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
               </div>
             </div>
             <div class="col-md-6 wow fadeInRight align-self-center d-flex justify-content-center" style="padding-bottom: 15px;">
-              <div class="box-image-item2" style="width:90%; height: 90%; background-image: url(images/eops_3/3-10-01.jpg)">
-               </div>
+              <!-- <div class="box-image-item2" style="width:90%; height: 90%; background-image: url(images/eops_3/3-10-01.jpg)">
+               </div> -->
             </div>
           </div>
         </div>
@@ -252,10 +252,13 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <a href="#3">
                   <img src="images/eops_3/tercer_nivel.jpg" alt="">
                 </a>  
+                 <a href="#4">
+                  <img src="images/eops_3/3-10-01.jpg" alt="">
+                </a>  
               </section>
               <section>
                 <article class="light-box" id="1">
-                  <a href="#3" class="back"><i class="icon_back"></i></a>
+                  <a href="#4" class="back"><i class="icon_back"></i></a>
                     <img src="images/eops_3/primer_nivel.jpg" alt="">
                   <a href="#2" class="next"><i class="icon_next"></i></a>
                   <a href="#plant_distribucion" class="close">X</a>
@@ -269,11 +272,19 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <article class="light-box" id="3">
                   <a href="#2" class="back"><i class="icon_back"></i></a>
                     <img src="images/eops_3/tercer_nivel.jpg" alt="">
+                  <a href="#4" class="next"><i class="icon_next"></i></a>
+                  <a href="#plant_distribucion" class="close">X</a>
+                </article>
+                 <article class="light-box" id="4">
+                  <a href="#3" class="back"><i class="icon_back"></i></a>
+                    <img src="images/eops_3/3-10-01.jpg" alt="">
                   <a href="#1" class="next"><i class="icon_next"></i></a>
                   <a href="#plant_distribucion" class="close">X</a>
                 </article>
               </section>
             </div>
+            
+          </div>
           </div>
         </div>
       </section> 
